2006-05-08  Karl Berry  <karl@gnu.org>

	* autogen.sh: new name for bootstrap, and improve msg.  From Bruno
	via hello.

2006-05-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\dopdfimage): width and height args might have
	whitespace.  Report from Bob Chassell.

2006-05-05  Karl Berry  <karl@gnu.org>

	* texinfo.tex (\definetextfonsizexi, \definetextfonsizex): new cmds.
	(\fonttextsize): new user-level command @fonttextsize to change
	text font size.  (To be used for the next Emacs edition.)
	* makeinfo/cmds.c (cm_fonttextsize): new fn.
	(command_table): include it.
	* NEWS, doc/texinfo.txi (Fonts): document it.

2006-05-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Reporting Bugs): wording to match hello.

2006-04-26  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (TXI_XLATE): add txi-ru.tex and txi-uk.tex,
	from Sergey Poznyakoff.
	* doc/txi-ru.tex, doc/txi-uk.tex: new files.

2006-04-13  Karl Berry  <karl@gnu.org>

	* makeinfo/insertion.c (end_insertion): kill_self_indent(-1) to
	remove all indentation.  From Brian Gough, 11 Apr 2006 16:42:29 +0100.

2006-04-11  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (GNU Sample Texts): GFDL is version 1.2 now.
	Report from Claudio.

2006-03-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Command Expansion): use U+2605 for
	@point{} and U+22A3 for @print{}.  From Patrice.

2006-03-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (copying): warn not to indent lines within the
	@copying.

2006-03-24  Karl Berry  <karl@gnu.org>

	* makeinfo/html.c (escape_string): do not free the old string,
	that is dangerous, only the caller should do it.
	(add_link): escape the title string.
	Report from Ralf Wildenhues, 17 Mar 2006 05:08:11 +0100.

2006-03-21  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.tex (\parseargusing, \finishparsearg): Use \argtorun
	  instead of \next.
	(\argcheckspacesY): Change the wording of the comment about \next.
	(\braceorline, \braceorlinexxx): Do not suppose that \next is