@@ -1,3 +1,7 @@
+2006-05-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* util/gendocs.sh: quoting, url fixes.
+
 2006-05-08  Karl Berry  <karl@gnu.org>
 
 	* autogen.sh: new name for bootstrap, and improve msg.  From Bruno
